--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <head>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,21 +18,21 @@
 <body class="p-2 sm:px-0 max-w-580 mx-auto">
   <div class="has fixed bg-white h-2 z-5 top-0 max-w-[inherit] mx-auto my-0 inset-x-2 sm:inset-x-0"></div>
   <header class="mb-5">
-    <div class="fixed border z-5 max-w-580 mx-auto p-2 rounded-xl border-solid top-2 inset-x-2 border-transparent">
-      <div class="flex justify-between">
-        <button class="inline-flex place-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white">
+    <div class="fixed border z-5 max-w-580 mx-auto p-2 rounded-xl border-solid top-2 inset-x-2 border-transparent" data-js="container-header">
+      <div class="flex justify-between" data-js="header-profile">
+        <button class="inline-flex place-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white" data-js="header_button--back">
           <svg class="w-5 h-5 fill-current" width="100%" height="100%">
             <use xlink:href="#i.back"></use>
           </svg>
         </button>
-        <div class="hidden"><img class="w-10 h-10 rounded-full" src="/assets/images/himwears.png" /></div>
-        <button class="inline-flex place-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white">
+        <div class="hidden" data-js="header_button--profile"><img class="w-10 h-10 rounded-full" src="/assets/images/himwears.png" /></div>
+        <button class="inline-flex place-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white" data-js="header_button--search">
           <svg class="w-5 h-5 fill-current" width="100%" height="100%">
             <use xlink:href="#i.search"></use>
           </svg>
         </button>
       </div>
-      <div class="hidden flex place-center">
+      <div class="hidden flex place-center" data-js="header-search">
         <form class="flex flex-1 items-center gap-[15px] border bg-white h-10 px-2.5 py-0 rounded-xl border-solid mr-3">
           <input class="w-full h-full text-sm bg-transparent p-0 border-0 focus:outline-none" placeholder="Cari produk.." /><button
             class="hidden text-xs cursor-pointer"
@@ -41,14 +41,14 @@
             Clear
           </button>
         </form>
-        <button class="inline-flex place-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white">
+        <button class="inline-flex place-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white" data-js="header_search--button">
           <svg class="w-5 h-5 fill-current" width="100%" height="100%">
             <use xlink:href="#i.close"></use>
           </svg>
         </button>
       </div>
     </div>
-    <div class="w-full h-44 bg-gray-300 rounded-xl text-center flex flex-col items-center justify-end">
+    <div class="w-full h-44 bg-gray-300 rounded-xl text-center flex flex-col items-center justify-end" data-js="container-background">
       {% if page.is_homepage %}
       <!-- Perlakuan khusus seperti homepage -->
       <div class="md:px-0">
