--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,24 +45,16 @@
         </button>
       </div>
     </div>
-    <div class="w-full h-44 bg-gray-300 rounded-xl text-center flex flex-col items-center justify-end" data-js="container-background">
+    <div class="w-full h-44 bg-gray-300 p-2 rounded-xl text-center flex flex-col items-center justify-end gap-y-1.5" data-js="container-background">
       {% if page.url == '/' %}
-      <div class="px-6 md:px-8 py-0 space-y-2">
-        <div class="flex place-center relative">
-          <img class="bg-gray-200 size-24 border-4 border-solid border-white rounded-full object-cover h-16 w-16" src="/assets/images/himwears.png" alt="HERWEARS">
+        <div class="flex justify-center relative">
+          <img class="h-16 w-16 border-4 border-white rounded-full object-cover" src="/assets/images/himwears.png" alt="{{ site.title }}">
         </div>
-        <h3 class="text-center font-manrope font-bold text-lg text-gray-900">HERWEARS</h3>
-        <p class="font-normal text-sm text-gray-500 text-center">Deskripsi Bio</p>
-      </div>
-
-      <!-- <div class="md:px-0">
-        <img class="bg-gray-200 w-full rounded-xl h-44 object-cover" src="/assets/images/1705471739.png" alt="undefined" />
-      </div>
-      <h1 class="text-xl font-bold">Featured Products gegegegeg</h1>
-      <p class="text-sm mt-1">Temukan Produk Terpopuler.</p> -->
+        <h3 class="font-bold text-lg text-gray-900">{{ site.title }}</h3>
+        <p class="text-sm text-gray-600">{{ site.description }}</p>
       {% else %}
-      <h1 class="text-xl font-bold">Featured Products gegegegeg</h1>
-      <p class="text-sm mt-1">Temukan Produk Terpopuler.</p>
+        <h1 class="text-xl md:text-2xl font-bold text-gray-800">Featured Products</h1>
+        <p class="text-sm md:text-base text-gray-600">Temukan produk terpopuler pilihan kami.</p>
       {% endif %}
     </div>
   </header>
