--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
             <use xlink:href="{% if page.url == '/' %}#i.share{% else %}#i.back{% endif %}"></use>
           </svg>
         </button>
-        <div class="hidden" data-js="header_button--profile"><img class="w-10 h-10 rounded-full" src="/assets/images/himwears.png" /></div>
+        <div class="hidden" data-js="header_button--profile"><img class="w-10 h-10 rounded-full" src="{{ site.logo }}"/></div>
         <button class="inline-flex place-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white" data-js="header_button--search">
           <svg class="w-5 h-5 fill-current" width="100%" height="100%">
             <use xlink:href="#i.search"></use>
@@ -48,7 +48,7 @@
     <div class="w-full h-44 bg-gray-300 p-2 rounded-xl text-center flex flex-col items-center justify-end gap-y-1.5" data-js="container-background">
       {% if page.url == '/' %}
         <div class="flex justify-center relative">
-          <img class="h-16 w-16 border-4 border-white rounded-full object-cover" src="/assets/images/himwears.png" alt="{{ site.title }}">
+          <img class="h-16 w-16 border-4 border-white rounded-full object-cover" src="{{ site.logo }}" alt="{{ site.title }}">
         </div>
         <h3 class="font-bold text-lg text-gray-900">{{ site.title }}</h3>
         <p class="text-sm text-gray-600">{{ site.description }}</p>
@@ -63,7 +63,7 @@
 
   <footer class="">
     <div class="w-full h-auto bg-gray-300 rounded-xl text-center p-6 flex flex-col items-center justify-end gap-4">
-      <img class="w-12 h-12 object-contain rounded-full" src="/assets/images/himwears.png" alt="PelukanRasa Logo" />
+      <img class="w-12 h-12 object-contain rounded-full" src="{{ site.logo }}" alt="PelukanRasa Logo" />
       <h2 class="text-xl font-semibold text-gray-800">PelukanRasa</h2>
       <div class="flex gap-4 text-gray-600">
         <a href="https://instagram.com/pelukanrasa" target="_blank" class="hover:text-pink-500 transition">
@@ -104,6 +104,42 @@
               <p class="text-sm text-gray-500 mb-2">Bagikan produk ini:</p>
               <div class="flex justify-center gap-4">
                 <button class="text-blue-500 hover:text-blue-700" onclick="navigator.clipboard.writeText(window.location.href)">Salin Link</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <label class="inModal__overlay" for="inModal--product"></label>
+    </div>
+
+    <!--  -->
+    <div class="inModal --product">
+      <div class="w-[calc(100%_-_8px)] max-w-[580px] max-h-[calc(100%_-_60px)] transition-[inherit] z-[3] relative bg-[white] overflow-hidden mx-auto my-0 p-1 rounded-xl inModal__container--md">
+        <div class="flex w-full overflow-hidden flex-col gap-4">
+          <div class="relative">
+            <div class="bg-gray-800 flex items-center justify-center aspect-video overflow-hidden rounded-lg">
+              <img src="/assets/images/1.webp" alt="Tour Preview" class="object-cover opacity-80">
+            </div>
+            <label class="inModal__header-close absolute right-1.5 top-1.5" for="inModal--product">✕</label>
+          </div>
+          <div class="grid grid-cols-1 gap-1.5 md:grid-cols-3">
+            <button disabled="" class="block w-full text-center bg-gray-300 text-gray-500 py-2 rounded-lg cursor-not-allowed">
+              Belum tersedia di TikTok
+            </button>
+          
+            <button disabled="" class="block w-full text-center text-white py-2 rounded-lg transition bg-orange-500 hover:bg-orange-600">
+              Belum tersedia di Shopee
+            </button>
+          
+            <button disabled="" class="block w-full text-center bg-gray-300 text-gray-500 py-2 rounded-lg cursor-not-allowed">
+              Belum tersedia di Tokopedia
+            </button>
+          </div>
+          <div class="inModal__footer">
+            <div class="text-center">
+              <p class="text-sm text-gray-500 mb-2">Bagikan produk ini:</p>
+              <div class="flex justify-center gap-4">
+                <button class="text-blue-500 hover:text-blue-700" onclick="navigator.clipboard.writeText('http://127.0.0.1:4000/collections/kemeja/#COX001')">Salin Link</button>
               </div>
             </div>
           </div>
