--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,7 +122,7 @@
               <div class="font-semibold text-sm text-center absolute bg-white m-1.5 p-2 gap-x-8 rounded-md bottom-0 inset-x-0 shadow-md flex items-center justify-between">
                 <h6 class="font-semibold text-base leading-7 text-black truncate" data-js="modal:product__header-title"></h6>
                 <div class="flex items-center space-x-2 text-xs">
-                  <span class="font-semibold text-gray-800" data-js="modal:product__header-sales"></span>
+                  <span class="font-semibold text-gray-800 whitespace-nowrap" data-js="modal:product__header-sales"></span>
                   <div class="flex items-center space-x-1 bg-yellow-400 text-white px-2 py-1 rounded-full ml-2">
                     <svg class="w-3.5 h-3.5 text-white" width="100%" height="100%"><use xlink:href="#i.rating"></use></svg>
                     <span data-js="modal:product__header-rating"></span>
